# workticket

./: README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  ops-guide.md
.github/workflows/: backup-scheduled.yml  canary-deploy.yml  chain-of-custody.yml  chaos-weekly.yml  container-scan.yml  dependency-audit.yml  deploy.yml  full-ci.yml  load-test.yml  openapi-schema-check.yml  sbom.yml  semgrep.yml  supply-chain.yml
docs/: ONBOARDING.md  disaster-recovery.md  load-testing-guide.md  slo.md
docs/audit/: AUDIT_LOG_SCHEMA.md  AUDIT_TRAIL_EXAMPLES.md  COMPLIANCE_MAPPING.md
evidence/: collect_evidence.ps1  verify_ci_security.ps1
ops/: deploy-no-cloud.md
ops/argocd/: project.yaml  root-app.yaml
ops/argocd/infrastructure/: keda.yaml  (+5 more)
ops/cost-optimization/: kubecost-values.yaml  rightsizing-guide.md  spot-instances.yaml
ops/disaster-recovery/: backup-plan.md  cross-region-failover.sh  restore-drill.sh
ops/k8s/: pod-security-standard.yaml
ops/observability/: loki-values.yaml  prometheus-stack-values.yaml  tempo-values.yaml
ops/supply-chain/: slsa-provenance.md
src/: .env.example  docker-compose.e2e.yml  docker-compose.prod-full.yml  docker-compose.redis-ha.yml  docker-compose.test.yml  docker-compose.yml
src/.well-known/: security.txt
src/backend/: .env.example  .test-env  Dockerfile  celery_app.py  create_missing_tables.py  db_bootstrap.py  entrypoint.sh  pyproject.toml  requirements.txt  stamp_head.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 040_merge_035_and_039.py  041_add_timezone_to_datetime_columns.py
src/backend/app/: config.py  database.py  exceptions.py  logging_config.py  main.py  redis_sentinel.py  sync_redis_pool.py  telemetry.py
src/backend/app/ai/: business_metrics.py  circuit_breaker.py  concurrency.py  gateway.py  local_rate_limiter.py  metrics.py  orchestrator.py  rate_limiter.py  router.py  schemas.py  validator.py
src/backend/app/analytics/: __init__.py  queries.py  router.py
src/backend/app/auth/: authorize.py  compliance.py  dependencies.py  router.py
src/backend/app/billing/: abuse.py  account_routes.py  beta_gate.py  concurrency.py  dead_letter.py  dlq_monitor.py  invoice_routes.py  quota_engine.py  reconciliation.py  state_machine.py  stripe_ips.py  tasks.py
src/backend/app/db/: encrypted_string.py  pii_encryption.py  rls.py  transactional.py
src/backend/app/deploy/: canary.py
src/backend/app/integrations/: feature_flags.py
src/backend/app/jobs/: router.py
src/backend/app/middleware/: priority.py  rate_limit.py  sanitize.py
src/backend/app/monitoring/: anomaly.py  prometheus.py  redis_tenants.py
src/backend/app/notifications/: email_service.py  encryption.py  service.py  sms_service.py
src/backend/app/secrets/: vault.py
src/backend/app/security/: encryption.py
src/backend/app/tasks/: beat_lock.py  heartbeat.py  retry_budget.py  retry_guard.py
src/backend/app/tracing/: models.py  router.py
src/backend/celery_config/: broker.py  worker.py
src/backend/scripts/: audit_ai_sanitization.py  generate-test-env.ps1  generate-test-env.sh  test_backup_restore.py  validate_runbooks.py
src/backend/tasks/: ai_tasks.py  billing_tasks.py  job_tasks.py
src/backend/tests/: conftest.py  migration_fuzz.py  test_auth.py  test_beta_readiness.py  test_billing_workflows.py  test_circuit_breaker.py  test_health.py  test_jobs.py  test_notifications.py  test_pagination.py  test_prometheus_auth.py  test_push_tokens.py  test_quotes.py  test_rate_limits.py  test_raw_sql_audit.py  test_redis_pool.py  test_sanitization.py  test_security_fixes.py  test_stripe_signature_verification.py  test_stripe_webhook.py  test_token_version.py  test_tracing.py  test_webhook_dedup.py  test_webhook_rate_limiter.py  test_websocket.py
src/backend/tests/adversarial/: test_bypass_attempts.py  test_e2e_prompt_injection.py  test_prompt_injection.py  test_prompt_injection_regression.py
src/backend/tests/contract/: test_api_contracts.py
src/backend/tests/release_gates/: gate_a_integration_migration_test.py
src/backend/tests/security/: test_audit_signing.py  test_authentication.py  test_jwt_auth.py  test_rbac.py  test_red_team.py  test_sql_injection_fuzz.py  test_state_machine_security.py  test_tenant_isolation.py
src/k8s/: api-deployment.yaml  ingress.yaml  kustomization.yaml  network-policy.yaml  pgbouncer.yaml  service-account.yaml  web-dashboard-service.yaml  worker-deployments.yaml
src/mobile-app/: package-lock.json  package.json
src/nginx/: nginx.conf
src/web-dashboard/: package-lock.json  package.json  vitest.config.ts
src/whisper-service/: pyproject.toml  requirements.txt
(+38 files in other folders)
