[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "workticket-whisper"
version = "1.0.0-beta.1"
description = "WorkTicket Whisper ASR Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "starlette>=0.47.2",
    "uvicorn[standard]==0.49.0",
    "faster-whisper==1.1.0",
    "httpx==0.28.0",
    "python-multipart==0.0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
